NMS-12445: Integrate OIA GraphProvider as well as allow exposing it to the TopologyUI

--- a/features/api-layer/pom.xml
+++ b/features/api-layer/pom.xml
@@ -124,6 +124,11 @@
             <artifactId>org.opennms.features.collection.thresholding.api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opennms.features.graph</groupId>
+            <artifactId>org.opennms.features.graph.api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Test -->
         <dependency>
