NMS-12445: Restructuring and add support for OIA-GraphContainerProvider

--- a/features/graph/provider/pom.xml
+++ b/features/graph/provider/pom.xml
@@ -17,5 +17,6 @@
         <module>graphml</module>
         <module>legacy</module>
         <module>persistence-test</module>
+        <module>topology</module>
     </modules>
 </project>
