NMS-12383: externalize configuration

--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -654,6 +654,7 @@ excludeServiceMonitorsFromRemotePoller=DHCP,NSClient,RadiusAuth,XMP
 #   newts
 #   evaluate (for sizing purposes only)
 #   tcp (export metrics using protobuf messages over TCP)
+#   integration (the timeseries integration layer, to be used for inmemory, timescale, influxdb)
 #org.opennms.timeseries.strategy=rrd
 
 ###### Graphing #####
@@ -710,11 +711,15 @@ excludeServiceMonitorsFromRemotePoller=DHCP,NSClient,RadiusAuth,XMP
 #Disables the processing of counter wraps, replacing these with NaNs instead.
 org.opennms.newts.nan_on_counter_wrap=true
 
-###### Timescale #####
-# Use these properties to configure persistence using Newts
-# Note that Newts must be enabled using the 'org.opennms.timeseries.strategy' property
-# for these to take effect.
+###### Timeseries Integration Layer #####
+# Use these properties to configure persistence using the new timeseries abstraction layer
+# Note that timeseries must be enabled using the 'org.opennms.timeseries.strategy' property
+# for these to take effect. org.opennms.timeseries.strategy=integration
 #
+# The implementation to use. Choose one:
+#org.opennms.timeseries.impl=org.opennms.netmgt.timeseries.impl.timescale.TimescaleStorage
+#org.opennms.timeseries.impl=org.opennms.netmgt.timeseries.impl.influxdb.InfluxdbStorage
+#org.opennms.timeseries.impl=org.opennms.netmgt.timeseries.impl.memory.InMemoryStorage
 #org.opennms.newts.config.hostname=localhost
 #org.opennms.newts.config.keyspace=newts
 #org.opennms.newts.config.port=9042
@@ -739,6 +744,12 @@ org.opennms.newts.nan_on_counter_wrap=true
 # Cache priming
 #org.opennms.newts.config.cache.priming.disable=false
 #org.opennms.newts.config.cache.priming.block_ms=120000
+# Additional properties when using InfluxDb as timeseries database:
+#org.opennms.timeseries.influxdb.bucket=opennms
+#org.opennms.timeseries.influxdb.org=opennms
+#org.opennms.timeseries.influxdb.token=opennms
+#org.opennms.timeseries.influxdb.url=http://localhost:9999
+
 
 #Disables the processing of counter wraps, replacing these with NaNs instead.
 org.opennms.newts.nan_on_counter_wrap=true
